Add settings for search bar, project explorer, and breadcrumb visibility; update default theme